Renamed electricity_week electricity_plots

--- a/electricity_rates/feed_in.ipynb
+++ b/electricity_rates/feed_in.ipynb
@@ -6,211 +6,31 @@
    "source": [
     "# Feed In\n",
     "\n",
-    "This notebook calculates the amount earned through feeding electricity back into the network at  "
+    "This notebook calculates the amount earned through feeding electricity back into the network at different rates for two properties: olr and 1mc. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing packages\n",
     "import pandas as pd\n",
-    "import numpy as np \n",
     "import matplotlib.dates as mdates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing data\n",
-    "data_1mc = pd.read_csv('data/HDF_calckWh_10000826638_26-02-2025.csv')\n",
-    "data_olr = pd.read_csv('data/HDF_calckWh_10000847339_26-02-2025.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Grouping data and extracting export data.\n",
-    "data_1mc['Date'] = pd.to_datetime(data_olr['Read Date and End Time'], dayfirst=True)\n",
-    "data_1mc.groupby(['Read Type',pd.Grouper(key='Date', freq='1D')]).sum().reset_index()\n",
-    "grouped_data_1mc = data_1mc.groupby(['Read Type',pd.Grouper(key='Date', freq='1D')]).sum().reset_index()\n",
-    "export_data_1mc = grouped_data_1mc[grouped_data_1mc['Read Type'] == 'Active Export Interval (kWh)']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Setting copy on write option to avoid SettingWithCopyWarning\n",
-    "pd.options.mode.copy_on_write = True\n",
-    "\n",
-    "# Converting dates for ease of calculation\n",
-    "data_1mc['Date'] = pd.to_datetime(data_1mc['Read Date and End Time'], dayfirst=True)\n",
-    "grouped_data_1mc = data_1mc.groupby(['Read Type',pd.Grouper(key='Date', freq='1D')]).sum().reset_index()\n",
-    "export_data_1mc = grouped_data_1mc[grouped_data_1mc['Read Type'] == 'Active Export Interval (kWh)']\n",
-    "\n",
-    "export_data_1mc['Date'] = mdates.num2date(mdates.date2num(export_data_1mc['Date']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    10-01-2024 23:3010-01-2024 23:0010-01-2024 22:...\n",
-       "1    11-01-2024 23:3011-01-2024 23:0011-01-2024 22:...\n",
-       "2    12-01-2024 23:3012-01-2024 23:0012-01-2024 22:...\n",
-       "3    13-01-2024 23:3013-01-2024 23:0013-01-2024 22:...\n",
-       "4    14-01-2024 23:3014-01-2024 23:0014-01-2024 22:...\n",
-       "Name: Read Date and End Time, dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Displaying first 5 rows of the 'Read Date and End Time' column\n",
-    "export_data_1mc.loc[:,'Read Date and End Time'][:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Read Type</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>MPRN</th>\n",
-       "      <th>Meter Serial Number</th>\n",
-       "      <th>Read Value</th>\n",
-       "      <th>Read Date and End Time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Active Export Interval (kWh)</td>\n",
-       "      <td>2024-01-10</td>\n",
-       "      <td>460038977594</td>\n",
-       "      <td>1571066244</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10-01-2024 23:3010-01-2024 23:0010-01-2024 22:...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Active Export Interval (kWh)</td>\n",
-       "      <td>2024-01-11</td>\n",
-       "      <td>480040672272</td>\n",
-       "      <td>1639373472</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11-01-2024 23:3011-01-2024 23:0011-01-2024 22:...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Active Export Interval (kWh)</td>\n",
-       "      <td>2024-01-12</td>\n",
-       "      <td>480040672272</td>\n",
-       "      <td>1639373472</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12-01-2024 23:3012-01-2024 23:0012-01-2024 22:...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Active Export Interval (kWh)</td>\n",
-       "      <td>2024-01-13</td>\n",
-       "      <td>480040672272</td>\n",
-       "      <td>1639373472</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13-01-2024 23:3013-01-2024 23:0013-01-2024 22:...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Active Export Interval (kWh)</td>\n",
-       "      <td>2024-01-14</td>\n",
-       "      <td>480040672272</td>\n",
-       "      <td>1639373472</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>14-01-2024 23:3014-01-2024 23:0014-01-2024 22:...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      Read Type       Date          MPRN  Meter Serial Number  \\\n",
-       "0  Active Export Interval (kWh) 2024-01-10  460038977594           1571066244   \n",
-       "1  Active Export Interval (kWh) 2024-01-11  480040672272           1639373472   \n",
-       "2  Active Export Interval (kWh) 2024-01-12  480040672272           1639373472   \n",
-       "3  Active Export Interval (kWh) 2024-01-13  480040672272           1639373472   \n",
-       "4  Active Export Interval (kWh) 2024-01-14  480040672272           1639373472   \n",
-       "\n",
-       "   Read Value                             Read Date and End Time  \n",
-       "0         0.0  10-01-2024 23:3010-01-2024 23:0010-01-2024 22:...  \n",
-       "1         0.0  11-01-2024 23:3011-01-2024 23:0011-01-2024 22:...  \n",
-       "2         0.0  12-01-2024 23:3012-01-2024 23:0012-01-2024 22:...  \n",
-       "3         0.0  13-01-2024 23:3013-01-2024 23:0013-01-2024 22:...  \n",
-       "4         0.0  14-01-2024 23:3014-01-2024 23:0014-01-2024 22:...  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Grouping data and extracting export data.\n",
-    "data_olr['Date'] = pd.to_datetime(data_olr['Read Date and End Time'], dayfirst=True)\n",
-    "grouped_data_olr = data_olr.groupby(['Read Type',pd.Grouper(key='Date', freq='1D')]).sum().reset_index()\n",
-    "active_export_olr = grouped_data_olr[grouped_data_olr['Read Type'] == 'Active Export Interval (kWh)']\n",
-    "\n",
-    "active_export_olr.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Grouping data and summing 'Read Value' by day\n",
-    "data_olr['Date'] = pd.to_datetime(data_olr['Read Date and End Time'], dayfirst=True)\n",
-    "grouped_data_olr = data_olr.groupby(pd.Grouper(key='Date', freq='1D')).sum()['Read Value'].reset_index()\n"
+    "data_1mc = pd.read_csv('data/HDF_calckWh_10000826638_26-02-2025.csv', parse_dates=['Read Date and End Time'], dayfirst=True, index_col='Read Date and End Time', usecols=['Read Type', 'Read Value', 'Read Date and End Time'])\n",
+    "data_olr = pd.read_csv('data/HDF_calckWh_10000847339_26-02-2025.csv', parse_dates=['Read Date and End Time'], dayfirst=True, index_col='Read Date and End Time', usecols=['Read Type', 'Read Value', 'Read Date and End Time'])\n",
+    "data_1mc.index.rename('Date', inplace=True)\n",
+    "data_olr.index.rename('Date', inplace=True)"
    ]
   },
   {
@@ -222,25 +42,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "€500.03\n"
+      "Total for olr: €277.89\n",
+      "Total for 1mc: €397.36\n"
      ]
     }
    ],
    "source": [
-    "# Calculating total feed-in tariff\n",
-    "tariff_1 = 0.24  # Rate for period 1\n",
-    "tariff_2 = 0.20  # Rate for period 2\n",
-    "olr_tariff_1 = grouped_data_olr[(grouped_data_olr['Date']<='2025-01-12') & (grouped_data_olr['Date']>'2024-01-24')]['Read Value'].sum()\n",
-    "olr_tariff_2 = grouped_data_olr[(grouped_data_olr['Date']>'2025-01-12') & (grouped_data_olr['Date']<'2025-01-24')]['Read Value'].sum()\n",
+    "export_data_1mc = data_1mc[data_1mc['Read Type'] == 'Active Export Interval (kWh)']\n",
+    "export_data_olr = data_olr[data_olr['Read Type'] == 'Active Export Interval (kWh)']\n",
     "\n",
-    "total = olr_tariff_1 * tariff_1 + olr_tariff_2 * tariff_2\n",
-    "print(f'€{total:.2f}')"
+    "tariff_1_1mc = export_data_1mc[(export_data_1mc.index<='2025-01-12')]['Read Value'].sum()\n",
+    "tariff_2_1mc = export_data_1mc[(export_data_1mc.index>'2025-01-12')]['Read Value'].sum()\n",
+    "\n",
+    "tariff_1_olr = export_data_olr[(export_data_olr.index<='2025-01-12')]['Read Value'].sum()\n",
+    "tariff_2_olr = export_data_olr[(export_data_olr.index>'2025-01-12')]['Read Value'].sum()   \n",
+    " \n",
+    "rate_1 = 0.24  # €/kWh rate for period 1\n",
+    "rate_2 = 0.20  # €/kWh rate for period 2\n",
+    "\n",
+    "total_olr = tariff_1_olr * rate_1 + tariff_2_olr * rate_2\n",
+    "\n",
+    "total_1mc = tariff_1_1mc * rate_1 + tariff_2_1mc * rate_2\n",
+    "\n",
+    "print(f'Total for olr: €{total_olr:.2f}')\n",
+    "print(f'Total for 1mc: €{total_1mc:.2f}')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -254,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
