--- a/electricity_rates/1mc.ipynb
+++ b/electricity_rates/1mc.ipynb
@@ -316,19 +316,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "777.481\n",
-      "128.5605\n",
-      "333.8065\n",
-      "347.94050000000004\n"
+      "777.48\n",
+      "128.56\n",
+      "333.81\n",
+      "347.94\n"
      ]
     }
    ],
    "source": [
     "# print totals\n",
-    "print(day_total)\n",
-    "print(peak_total)\n",
-    "print(night_total)\n",
-    "print(ev_total)"
+    "print(f'{day_total:.2f}')\n",
+    "print(f'{peak_total:.2f}')\n",
+    "print(f'{night_total:.2f}')\n",
+    "print(f'{ev_total:.2f}')"
    ]
   },
   {
@@ -397,21 +397,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "405.34449595"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "405.34\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for SSE EV\n",
     "SSE_EV_total = rates['SSE EV']['day'] * day_total + rates['SSE EV']['peak'] * peak_total + rates['SSE EV']['night'] * night_total + rates['SSE EV']['ev'] * ev_total\n",
     "\n",
-    "SSE_EV_total"
+    "print(f'{SSE_EV_total:.2f}')"
    ]
   },
   {
@@ -420,21 +417,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "423.14563525"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "423.15\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for SSE 24\n",
     "SSE_24_total = rates['SSE 24']['day'] * day_total + rates['SSE 24']['peak'] * peak_total + rates['SSE 24']['night'] * night_total + rates['SSE 24']['ev'] * ev_total\n",
     "\n",
-    "SSE_24_total"
+    "print(f'{SSE_24_total:.2f}')"
    ]
   },
   {
@@ -443,21 +437,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "404.2082183"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "404.21\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for En S EV\n",
     "EN_S_EV_total = rates['En S EV']['day'] * day_total + rates['En S EV']['peak'] * peak_total + rates['En S EV']['night'] * night2_total + rates['En S EV']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_EV_total"
+    "print(f'{EN_S_EV_total:.2f}')"
    ]
   },
   {
@@ -466,21 +457,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "321.93631450000004"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "321.94\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for En S Data\n",
     "EN_S_DATA_total = rates['En S Data']['day'] * day_total + rates['En S Data']['peak'] * peak_total + rates['En S Data']['night'] * night2_total + rates['En S Data']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_DATA_total"
+    "print(f'{EN_S_DATA_total:.2f}')"
    ]
   },
   {
@@ -489,21 +477,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "434.91507090000005"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "434.92\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for En S Drive\n",
     "EN_S_Drive_total = rates['En S Drive']['day'] * day_total + rates['En S Drive']['peak'] * peak_total + rates['En S Drive']['night'] * night2_total + rates['En S Drive']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_Drive_total"
+    "print(f'{EN_S_Drive_total:.2f}')"
    ]
   },
   {
@@ -512,21 +497,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "372.88995835000003"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "372.89\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for BG S EV DFD\n",
     "BG_S_EV_DFD_total = rates['BG S EV DFD']['day'] * day_total + rates['BG S EV DFD']['peak'] * peak_total + rates['BG S EV DFD']['night'] * night2_total + rates['BG S EV DFD']['ev'] * ev2_total\n",
     "\n",
-    "BG_S_EV_DFD_total"
+    "print(f'{BG_S_EV_DFD_total:.2f}')"
    ]
   },
   {
@@ -535,21 +517,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "341.1519361"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "341.15\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for En S Data DF\n",
     "EN_S_DATA_DF_total = rates['En S Data DF']['day'] * day_total + rates['En S Data DF']['peak'] * peak_total + rates['En S Data DF']['night'] * night2_total + rates['En S Data DF']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_DATA_DF_total"
+    "print(f'{EN_S_DATA_DF_total:.2f}')"
    ]
   },
   {
@@ -558,26 +537,23 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "389.319808"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "389.32\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for FG S Data DF\n",
     "FG_DF_S_total = rates['FG DF S']['day'] * day_total + rates['FG DF S']['peak'] * peak_total + rates['FG DF S']['night'] * night2_total + rates['FG DF S']['ev'] * ev2_total\n",
     "\n",
-    "FG_DF_S_total"
+    "print(f'{FG_DF_S_total:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -622,11 +598,11 @@
        "      <td>434.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Board Gais S EV DFD</th>\n",
+       "      <th>Board Gais S EV Dual Fuel D</th>\n",
        "      <td>372.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Energia S Data DF</th>\n",
+       "      <th>Energia S Data Dual Fuel</th>\n",
        "      <td>341.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -638,14 +614,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                       Cost\n",
-       "SSE EV               405.34\n",
-       "SSE 24               423.15\n",
-       "Energia S Data       321.94\n",
-       "Energia S Drive      434.92\n",
-       "Board Gais S EV DFD  372.89\n",
-       "Energia S Data DF    341.15\n",
-       "Flogas Dual Fuel S   389.32"
+       "                               Cost\n",
+       "SSE EV                       405.34\n",
+       "SSE 24                       423.15\n",
+       "Energia S Data               321.94\n",
+       "Energia S Drive              434.92\n",
+       "Board Gais S EV Dual Fuel D  372.89\n",
+       "Energia S Data Dual Fuel     341.15\n",
+       "Flogas Dual Fuel S           389.32"
       ]
      },
      "execution_count": 15,
@@ -726,7 +702,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -740,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
