--- a/electricity_rates/23olr.ipynb
+++ b/electricity_rates/23olr.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "      <td>0.0755</td>\n",
        "      <td>...</td>\n",
        "      <td>0.1585</td>\n",
-       "      <td>0.1610</td>\n",
+       "      <td>0.161</td>\n",
        "      <td>0.3065</td>\n",
        "      <td>0.1450</td>\n",
        "      <td>0.1525</td>\n",
@@ -133,7 +133,7 @@
        "      <td>0.0620</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0030</td>\n",
-       "      <td>0.0030</td>\n",
+       "      <td>0.003</td>\n",
        "      <td>0.0565</td>\n",
        "      <td>0.1370</td>\n",
        "      <td>0.0995</td>\n",
@@ -157,7 +157,7 @@
        "      <td>0.2095</td>\n",
        "      <td>...</td>\n",
        "      <td>0.1640</td>\n",
-       "      <td>0.0930</td>\n",
+       "      <td>0.093</td>\n",
        "      <td>0.0945</td>\n",
        "      <td>0.1465</td>\n",
        "      <td>0.1265</td>\n",
@@ -181,7 +181,7 @@
        "      <td>0.0495</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0030</td>\n",
-       "      <td>0.0030</td>\n",
+       "      <td>0.003</td>\n",
        "      <td>0.0030</td>\n",
        "      <td>0.0030</td>\n",
        "      <td>0.0030</td>\n",
@@ -205,7 +205,7 @@
        "      <td>0.1065</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.1230</td>\n",
        "      <td>0.2090</td>\n",
@@ -215,153 +215,9 @@
        "      <td>0.1290</td>\n",
        "      <td>0.1080</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-01-20</th>\n",
-       "      <td>0.0835</td>\n",
-       "      <td>0.0745</td>\n",
-       "      <td>0.0490</td>\n",
-       "      <td>0.0745</td>\n",
-       "      <td>0.6900</td>\n",
-       "      <td>0.7275</td>\n",
-       "      <td>0.6490</td>\n",
-       "      <td>0.3505</td>\n",
-       "      <td>0.1600</td>\n",
-       "      <td>0.0600</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.1115</td>\n",
-       "      <td>0.1255</td>\n",
-       "      <td>0.1090</td>\n",
-       "      <td>0.0885</td>\n",
-       "      <td>0.1180</td>\n",
-       "      <td>0.0890</td>\n",
-       "      <td>0.0715</td>\n",
-       "      <td>0.0945</td>\n",
-       "      <td>0.0680</td>\n",
-       "      <td>0.0705</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-01-21</th>\n",
-       "      <td>0.2180</td>\n",
-       "      <td>0.0690</td>\n",
-       "      <td>0.0495</td>\n",
-       "      <td>0.0960</td>\n",
-       "      <td>0.6750</td>\n",
-       "      <td>0.7280</td>\n",
-       "      <td>0.7050</td>\n",
-       "      <td>0.3305</td>\n",
-       "      <td>0.1890</td>\n",
-       "      <td>0.0925</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0040</td>\n",
-       "      <td>0.1215</td>\n",
-       "      <td>0.0040</td>\n",
-       "      <td>0.0035</td>\n",
-       "      <td>0.0035</td>\n",
-       "      <td>0.0650</td>\n",
-       "      <td>0.0040</td>\n",
-       "      <td>0.0370</td>\n",
-       "      <td>0.0905</td>\n",
-       "      <td>0.1085</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-01-22</th>\n",
-       "      <td>0.0715</td>\n",
-       "      <td>0.0570</td>\n",
-       "      <td>0.0730</td>\n",
-       "      <td>0.0870</td>\n",
-       "      <td>0.6720</td>\n",
-       "      <td>0.7330</td>\n",
-       "      <td>0.6580</td>\n",
-       "      <td>0.3335</td>\n",
-       "      <td>0.1720</td>\n",
-       "      <td>0.0845</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0035</td>\n",
-       "      <td>0.0380</td>\n",
-       "      <td>0.0615</td>\n",
-       "      <td>0.0920</td>\n",
-       "      <td>0.0580</td>\n",
-       "      <td>0.0460</td>\n",
-       "      <td>0.0815</td>\n",
-       "      <td>0.2320</td>\n",
-       "      <td>0.1080</td>\n",
-       "      <td>0.1080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-01-23</th>\n",
-       "      <td>0.0750</td>\n",
-       "      <td>0.0640</td>\n",
-       "      <td>0.0915</td>\n",
-       "      <td>0.0735</td>\n",
-       "      <td>0.6790</td>\n",
-       "      <td>0.7525</td>\n",
-       "      <td>0.6660</td>\n",
-       "      <td>0.3340</td>\n",
-       "      <td>0.1770</td>\n",
-       "      <td>0.0810</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.1330</td>\n",
-       "      <td>0.1530</td>\n",
-       "      <td>0.0040</td>\n",
-       "      <td>0.0040</td>\n",
-       "      <td>0.0035</td>\n",
-       "      <td>0.0035</td>\n",
-       "      <td>0.0040</td>\n",
-       "      <td>0.0040</td>\n",
-       "      <td>0.1185</td>\n",
-       "      <td>0.1485</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-01-24</th>\n",
-       "      <td>0.0795</td>\n",
-       "      <td>0.0605</td>\n",
-       "      <td>0.0745</td>\n",
-       "      <td>0.0935</td>\n",
-       "      <td>0.6830</td>\n",
-       "      <td>0.7355</td>\n",
-       "      <td>0.6565</td>\n",
-       "      <td>0.3495</td>\n",
-       "      <td>0.1485</td>\n",
-       "      <td>0.0735</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0035</td>\n",
-       "      <td>0.0030</td>\n",
-       "      <td>0.0030</td>\n",
-       "      <td>0.0030</td>\n",
-       "      <td>0.0035</td>\n",
-       "      <td>0.0035</td>\n",
-       "      <td>0.0035</td>\n",
-       "      <td>0.0675</td>\n",
-       "      <td>0.0890</td>\n",
-       "      <td>0.1590</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>367 rows × 48 columns</p>\n",
+       "<p>5 rows × 48 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -372,26 +228,14 @@
        "2024-01-26  0.0605  0.0845  0.0950  0.0925  0.6900  0.7425  0.6500  0.3515   \n",
        "2024-01-27  0.0465  0.0455  0.0705  0.0800  0.6770  0.7330  0.6480  0.3710   \n",
        "2024-01-28  0.0815  0.0730  0.0735  0.1050  0.7470  0.7410  0.6205  0.3410   \n",
-       "...            ...     ...     ...     ...     ...     ...     ...     ...   \n",
-       "2025-01-20  0.0835  0.0745  0.0490  0.0745  0.6900  0.7275  0.6490  0.3505   \n",
-       "2025-01-21  0.2180  0.0690  0.0495  0.0960  0.6750  0.7280  0.7050  0.3305   \n",
-       "2025-01-22  0.0715  0.0570  0.0730  0.0870  0.6720  0.7330  0.6580  0.3335   \n",
-       "2025-01-23  0.0750  0.0640  0.0915  0.0735  0.6790  0.7525  0.6660  0.3340   \n",
-       "2025-01-24  0.0795  0.0605  0.0745  0.0935  0.6830  0.7355  0.6565  0.3495   \n",
        "\n",
-       "             04:00   04:30  ...   19:00   19:30   20:00   20:30   21:00  \\\n",
-       "Date                        ...                                           \n",
-       "2024-01-24  0.0905  0.0755  ...  0.1585  0.1610  0.3065  0.1450  0.1525   \n",
-       "2024-01-25  0.0620  0.0620  ...  0.0030  0.0030  0.0565  0.1370  0.0995   \n",
-       "2024-01-26  0.3775  0.2095  ...  0.1640  0.0930  0.0945  0.1465  0.1265   \n",
-       "2024-01-27  0.1545  0.0495  ...  0.0030  0.0030  0.0030  0.0030  0.0030   \n",
-       "2024-01-28  0.2340  0.1065  ...  0.0000  0.0000  0.0000  0.1230  0.2090   \n",
-       "...            ...     ...  ...     ...     ...     ...     ...     ...   \n",
-       "2025-01-20  0.1600  0.0600  ...  0.1115  0.1255  0.1090  0.0885  0.1180   \n",
-       "2025-01-21  0.1890  0.0925  ...  0.0040  0.1215  0.0040  0.0035  0.0035   \n",
-       "2025-01-22  0.1720  0.0845  ...  0.0035  0.0380  0.0615  0.0920  0.0580   \n",
-       "2025-01-23  0.1770  0.0810  ...  0.1330  0.1530  0.0040  0.0040  0.0035   \n",
-       "2025-01-24  0.1485  0.0735  ...  0.0035  0.0030  0.0030  0.0030  0.0035   \n",
+       "             04:00   04:30  ...   19:00  19:30   20:00   20:30   21:00  \\\n",
+       "Date                        ...                                          \n",
+       "2024-01-24  0.0905  0.0755  ...  0.1585  0.161  0.3065  0.1450  0.1525   \n",
+       "2024-01-25  0.0620  0.0620  ...  0.0030  0.003  0.0565  0.1370  0.0995   \n",
+       "2024-01-26  0.3775  0.2095  ...  0.1640  0.093  0.0945  0.1465  0.1265   \n",
+       "2024-01-27  0.1545  0.0495  ...  0.0030  0.003  0.0030  0.0030  0.0030   \n",
+       "2024-01-28  0.2340  0.1065  ...  0.0000  0.000  0.0000  0.1230  0.2090   \n",
        "\n",
        "             21:30   22:00   22:30   23:00   23:30  \n",
        "Date                                                \n",
@@ -400,14 +244,8 @@
        "2024-01-26  0.1010  0.2290  0.1215  0.1675  0.0540  \n",
        "2024-01-27  0.0030  0.0040  0.0040  0.0035  0.0145  \n",
        "2024-01-28  0.2565  0.1130  0.1430  0.1290  0.1080  \n",
-       "...            ...     ...     ...     ...     ...  \n",
-       "2025-01-20  0.0890  0.0715  0.0945  0.0680  0.0705  \n",
-       "2025-01-21  0.0650  0.0040  0.0370  0.0905  0.1085  \n",
-       "2025-01-22  0.0460  0.0815  0.2320  0.1080  0.1080  \n",
-       "2025-01-23  0.0035  0.0040  0.0040  0.1185  0.1485  \n",
-       "2025-01-24  0.0035  0.0035  0.0675  0.0890  0.1590  \n",
        "\n",
-       "[367 rows x 48 columns]"
+       "[5 rows x 48 columns]"
       ]
      },
      "execution_count": 2,
@@ -471,26 +309,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "289.832\n",
-      "50.384499999999996\n",
-      "188.44400000000002\n",
-      "462.8085\n"
+      "289.83\n",
+      "50.38\n",
+      "188.44\n",
+      "462.81\n"
      ]
     }
    ],
    "source": [
     "# print totals\n",
-    "print(day_total)\n",
-    "print(peak_total)\n",
-    "print(night_total)\n",
-    "print(ev_total)"
+    "print(f'{day_total:.2f}')\n",
+    "print(f'{peak_total:.2f}')\n",
+    "print(f'{night_total:.2f}')\n",
+    "print(f'{ev_total:.2f}')"
    ]
   },
   {
@@ -561,214 +399,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "188.58215460000002"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "188.58\n"
+     ]
     }
    ],
    "source": [
     "# calculate the total cost for SSE EV\n",
     "SSE_EV_total = rates['SSE EV']['day'] * day_total + rates['SSE EV']['peak'] * peak_total + rates['SSE EV']['night'] * night_total + rates['SSE EV']['ev'] * ev_total\n",
     "\n",
-    "SSE_EV_total"
+    "print(f'{SSE_EV_total:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "264.2264885"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "264.23\n"
+     ]
     }
    ],
    "source": [
     "# calculate the total cost for SSE 24\n",
     "SSE_24_total = rates['SSE 24']['day'] * day_total + rates['SSE 24']['peak'] * peak_total + rates['SSE 24']['night'] * night_total + rates['SSE 24']['ev'] * ev_total\n",
     "\n",
-    "SSE_24_total"
+    "print(f'{SSE_24_total:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "188.1891398"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "188.19\n"
+     ]
     }
    ],
    "source": [
     "# calculate the total cost for EN S EV\n",
     "EN_S_EV_total = rates['En S EV']['day'] * day_total + rates['En S EV']['peak'] * peak_total + rates['En S EV']['night'] * night2_total + rates['En S EV']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_EV_total"
+    "print(f'{EN_S_EV_total:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "174.23219435"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "174.23\n"
+     ]
     }
    ],
    "source": [
     "# calculate the total cost for EN S DATA\n",
     "EN_S_DATA_total = rates['En S Data']['day'] * day_total + rates['En S Data']['peak'] * peak_total + rates['En S Data']['night'] * night2_total + rates['En S Data']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_DATA_total"
+    "print(f'{EN_S_DATA_total:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "202.1060826"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "202.11\n"
+     ]
     }
    ],
    "source": [
     "# calculate the total cost for EN S Drive\n",
     "EN_S_Drive_total = rates['En S Drive']['day'] * day_total + rates['En S Drive']['peak'] * peak_total + rates['En S Drive']['night'] * night2_total + rates['En S Drive']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_Drive_total"
+    "print(f'{EN_S_Drive_total:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "174.69503304999998"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "174.70\n"
+     ]
     }
    ],
    "source": [
     "# calculate the total cost for BG S EV DFD\n",
     "BG_S_EV_DFD_total = rates['BG S EV DFD']['day'] * day_total + rates['BG S EV DFD']['peak'] * peak_total + rates['BG S EV DFD']['night'] * night2_total + rates['BG S EV DFD']['ev'] * ev2_total\n",
     "\n",
-    "BG_S_EV_DFD_total"
+    "print(f'{BG_S_EV_DFD_total:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "184.65089469999998"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "184.65\n"
+     ]
     }
    ],
    "source": [
     "# calculate the total cost for EN S DATA DF\n",
     "EN_S_DATA_DF_total = rates['En S Data DF']['day'] * day_total + rates['En S Data DF']['peak'] * peak_total + rates['En S Data DF']['night'] * night2_total + rates['En S Data DF']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_DATA_DF_total"
+    "print(f'{EN_S_DATA_DF_total:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "228.38656665"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "228.39\n"
+     ]
     }
    ],
    "source": [
     "# calculate the total cost for FG DF S\n",
     "FG_DF_S_total = rates['FG DF S']['day'] * day_total + rates['FG DF S']['peak'] * peak_total + rates['FG DF S']['night'] * night2_total + rates['FG DF S']['ev'] * ev2_total\n",
     "\n",
-    "FG_DF_S_total"
+    "print(f'{FG_DF_S_total:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "218.1673616"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "218.17\n"
+     ]
     }
    ],
    "source": [
     "# calcuate the total for the previous year\n",
     "olr2024 = rates['2024']['day'] * day_total + rates['2024']['peak'] * peak_total + rates['2024']['night'] * night2_total + rates['2024']['ev'] * ev2_total\n",
     "\n",
-    "olr2024"
+    "print(f'{olr2024:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -796,6 +607,10 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Previous Rates</th>\n",
+       "      <td>218.17</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>SSE EV</th>\n",
        "      <td>188.58</td>\n",
@@ -830,6 +645,7 @@
       ],
       "text/plain": [
        "                               Cost\n",
+       "Previous Rates               218.17\n",
        "SSE EV                       188.58\n",
        "SSE 24                       264.23\n",
        "Energia S Data               174.23\n",
@@ -863,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +733,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -931,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
