--- a/electricity_rates/ardamine.ipynb
+++ b/electricity_rates/ardamine.ipynb
@@ -478,19 +478,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "572.1949999999999\n",
-      "89.02199999999999\n",
-      "1418.306\n",
-      "86.565\n"
+      "572.19\n",
+      "89.02\n",
+      "1418.31\n",
+      "86.56\n"
      ]
     }
    ],
    "source": [
     "# print totals\n",
-    "print(day_total)\n",
-    "print(peak_total)\n",
-    "print(night_total)\n",
-    "print(ev_total)"
+    "print(f'{day_total:.2f}')\n",
+    "print(f'{peak_total:.2f}')\n",
+    "print(f'{night_total:.2f}')\n",
+    "print(f'{ev_total:.2f}')"
    ]
   },
   {
@@ -559,21 +559,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "504.96418700000004"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "504.96\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for SSE EV\n",
     "SSE_EV_total = rates['SSE EV']['day'] * day_total + rates['SSE EV']['peak'] * peak_total + rates['SSE EV']['night'] * night_total + rates['SSE EV']['ev'] * ev_total\n",
     "\n",
-    "SSE_EV_total"
+    "print(f'{SSE_EV_total:.2f}')"
    ]
   },
   {
@@ -582,21 +579,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "577.262452"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "577.26\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for SSE 24\n",
     "SSE_24_total = rates['SSE 24']['day'] * day_total + rates['SSE 24']['peak'] * peak_total + rates['SSE 24']['night'] * night_total + rates['SSE 24']['ev'] * ev_total\n",
     "\n",
-    "SSE_24_total"
+    "print(f'{SSE_24_total:.2f}')"
    ]
   },
   {
@@ -605,21 +599,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "494.9414215"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "494.94\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for En S EV\n",
     "EN_S_EV_total = rates['En S EV']['day'] * day_total + rates['En S EV']['peak'] * peak_total + rates['En S EV']['night'] * night2_total + rates['En S EV']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_EV_total"
+    "print(f'{EN_S_EV_total:.2f}')"
    ]
   },
   {
@@ -628,21 +619,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "370.77706979999994"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "370.78\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for En S Data\n",
     "EN_S_DATA_total = rates['En S Data']['day'] * day_total + rates['En S Data']['peak'] * peak_total + rates['En S Data']['night'] * night2_total + rates['En S Data']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_DATA_total"
+    "print(f'{EN_S_DATA_total:.2f}')"
    ]
   },
   {
@@ -651,21 +639,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "692.8272159999999"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "692.83\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for En S Drive\n",
     "EN_S_Drive_total = rates['En S Drive']['day'] * day_total + rates['En S Drive']['peak'] * peak_total + rates['En S Drive']['night'] * night2_total + rates['En S Drive']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_Drive_total"
+    "print(f'{EN_S_Drive_total:.2f}')"
    ]
   },
   {
@@ -674,21 +659,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "512.6339178000001"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "512.63\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for BG S EV DFD\n",
     "BG_S_EV_DFD_total = rates['BG S EV DFD']['day'] * day_total + rates['BG S EV DFD']['peak'] * peak_total + rates['BG S EV DFD']['night'] * night2_total + rates['BG S EV DFD']['ev'] * ev2_total\n",
     "\n",
-    "BG_S_EV_DFD_total"
+    "print(f'{BG_S_EV_DFD_total:.2f}')"
    ]
   },
   {
@@ -697,21 +679,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "392.95599749999997"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "392.96\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for En S Data DF\n",
     "EN_S_DATA_DF_total = rates['En S Data DF']['day'] * day_total + rates['En S Data DF']['peak'] * peak_total + rates['En S Data DF']['night'] * night2_total + rates['En S Data DF']['ev'] * ev2_total\n",
     "\n",
-    "EN_S_DATA_DF_total"
+    "print(f'{EN_S_DATA_DF_total:.2f}')"
    ]
   },
   {
@@ -720,26 +699,23 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "493.1114086"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "493.11\n"
+     ]
     }
    ],
    "source": [
     "# calculate total cost for FG S Data DF\n",
     "FG_DF_S_total = rates['FG DF S']['day'] * day_total + rates['FG DF S']['peak'] * peak_total + rates['FG DF S']['night'] * night2_total + rates['FG DF S']['ev'] * ev2_total\n",
     "\n",
-    "FG_DF_S_total"
+    "print(f'{FG_DF_S_total:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -784,11 +760,11 @@
        "      <td>692.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Board Gais S EV DFD</th>\n",
+       "      <th>Board Gais S EV Dual Fuel</th>\n",
        "      <td>512.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Energia S Data DF</th>\n",
+       "      <th>Energia S Data Dual Fuel</th>\n",
        "      <td>392.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -800,14 +776,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                       Cost\n",
-       "SSE EV               504.96\n",
-       "SSE 24               577.26\n",
-       "Energia S Data       370.78\n",
-       "Energia S Drive      692.83\n",
-       "Board Gais S EV DFD  512.63\n",
-       "Energia S Data DF    392.96\n",
-       "Flogas DF S          493.11"
+       "                             Cost\n",
+       "SSE EV                     504.96\n",
+       "SSE 24                     577.26\n",
+       "Energia S Data             370.78\n",
+       "Energia S Drive            692.83\n",
+       "Board Gais S EV Dual Fuel  512.63\n",
+       "Energia S Data Dual Fuel   392.96\n",
+       "Flogas DF S                493.11"
       ]
      },
      "execution_count": 15,
@@ -822,8 +798,8 @@
     "     'SSE 24':[f\"{SSE_24_total:.2f}\"],\n",
     "     'Energia S Data':[f\"{EN_S_DATA_total:.2f}\"],\n",
     "     'Energia S Drive':[f\"{EN_S_Drive_total:.2f}\"],\n",
-    "     'Board Gais S EV DFD':[f\"{BG_S_EV_DFD_total:.2f}\"],\n",
-    "     'Energia S Data DF':[f\"{EN_S_DATA_DF_total:.2f}\"],\n",
+    "     'Board Gais S EV Dual Fuel D':[f\"{BG_S_EV_DFD_total:.2f}\"],\n",
+    "     'Energia S Data Dual Fuel':[f\"{EN_S_DATA_DF_total:.2f}\"],\n",
     "     'Flogas DF S':[f\"{FG_DF_S_total:.2f}\"]   \n",
     "}\n",
     "\n",
@@ -888,7 +864,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -902,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
