Updated with new offer

--- a/electricity_rates_2026/electricity_rates_2026_23olr.ipynb
+++ b/electricity_rates_2026/electricity_rates_2026_23olr.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "262028d0",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "821c109b",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "9      0.0000  Active Export Interval (kWh)    2026-01-23 23:00:00"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "1449228c",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "np.float64(2439.6440000000002)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "190442dd",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "4af0df07",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
        "9      2026-01-23 22:30:00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "c3ab1b72",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "  'Peak Rate': {'Start': '17', 'End': '19'}}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,6 +576,15 @@
     "        \"Feed In Tariff\": 15.89,\n",
     "        \"Gas\": 8.22,\n",
     "        \"Gas - Standing Charge\": 15003/365\n",
+    "    },\n",
+    "    \"Energia Offer\": {\n",
+    "        \"Night Rate\": 14.36,\n",
+    "        \"Day Rate\": 26.12,\n",
+    "        \"Peak Rate\": 29.33,\n",
+    "        \"Standing Charge/Day\": 26501/365 + (26.30/365),\n",
+    "        \"Feed In Tariff\": 18.5,\n",
+    "        \"Gas\": 6.98,\n",
+    "        \"Gas - Standing Charge\": 14160/365\n",
     "    }\n",
     "}\n",
     "\n",
@@ -805,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "ea7a24ff",
    "metadata": {},
    "outputs": [],
@@ -1064,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "a31d0623",
    "metadata": {},
    "outputs": [
@@ -1175,7 +1184,7 @@
        "Total kWh       1927.8695      1927.8695  1927.8695  1927.8695  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,162 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e82e11cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Read Value</th>\n",
-       "      <th>Read Type</th>\n",
-       "      <th>Read Date and End Time</th>\n",
-       "      <th>Read Date and Start Time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0710</td>\n",
-       "      <td>Active Import Interval (kWh)</td>\n",
-       "      <td>2026-01-24 01:00:00</td>\n",
-       "      <td>2026-01-24 00:30:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0525</td>\n",
-       "      <td>Active Import Interval (kWh)</td>\n",
-       "      <td>2026-01-24 00:30:00</td>\n",
-       "      <td>2026-01-24 00:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0650</td>\n",
-       "      <td>Active Import Interval (kWh)</td>\n",
-       "      <td>2026-01-24 00:00:00</td>\n",
-       "      <td>2026-01-23 23:30:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.0830</td>\n",
-       "      <td>Active Import Interval (kWh)</td>\n",
-       "      <td>2026-01-23 23:30:00</td>\n",
-       "      <td>2026-01-23 23:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>0.0025</td>\n",
-       "      <td>Active Import Interval (kWh)</td>\n",
-       "      <td>2026-01-23 08:00:00</td>\n",
-       "      <td>2026-01-23 07:30:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69916</th>\n",
-       "      <td>0.0630</td>\n",
-       "      <td>Active Import Interval (kWh)</td>\n",
-       "      <td>2024-01-25 02:00:00</td>\n",
-       "      <td>2024-01-25 01:30:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69918</th>\n",
-       "      <td>0.0855</td>\n",
-       "      <td>Active Import Interval (kWh)</td>\n",
-       "      <td>2024-01-25 01:30:00</td>\n",
-       "      <td>2024-01-25 01:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69920</th>\n",
-       "      <td>0.1150</td>\n",
-       "      <td>Active Import Interval (kWh)</td>\n",
-       "      <td>2024-01-25 01:00:00</td>\n",
-       "      <td>2024-01-25 00:30:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69922</th>\n",
-       "      <td>0.1110</td>\n",
-       "      <td>Active Import Interval (kWh)</td>\n",
-       "      <td>2024-01-25 00:30:00</td>\n",
-       "      <td>2024-01-25 00:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69924</th>\n",
-       "      <td>0.0865</td>\n",
-       "      <td>Active Import Interval (kWh)</td>\n",
-       "      <td>2024-01-25 00:00:00</td>\n",
-       "      <td>2024-01-24 23:30:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>13106 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Read Value                     Read Type Read Date and End Time  \\\n",
-       "1          0.0710  Active Import Interval (kWh)    2026-01-24 01:00:00   \n",
-       "3          0.0525  Active Import Interval (kWh)    2026-01-24 00:30:00   \n",
-       "4          0.0650  Active Import Interval (kWh)    2026-01-24 00:00:00   \n",
-       "7          0.0830  Active Import Interval (kWh)    2026-01-23 23:30:00   \n",
-       "69         0.0025  Active Import Interval (kWh)    2026-01-23 08:00:00   \n",
-       "...           ...                           ...                    ...   \n",
-       "69916      0.0630  Active Import Interval (kWh)    2024-01-25 02:00:00   \n",
-       "69918      0.0855  Active Import Interval (kWh)    2024-01-25 01:30:00   \n",
-       "69920      0.1150  Active Import Interval (kWh)    2024-01-25 01:00:00   \n",
-       "69922      0.1110  Active Import Interval (kWh)    2024-01-25 00:30:00   \n",
-       "69924      0.0865  Active Import Interval (kWh)    2024-01-25 00:00:00   \n",
-       "\n",
-       "      Read Date and Start Time  \n",
-       "1          2026-01-24 00:30:00  \n",
-       "3          2026-01-24 00:00:00  \n",
-       "4          2026-01-23 23:30:00  \n",
-       "7          2026-01-23 23:00:00  \n",
-       "69         2026-01-23 07:30:00  \n",
-       "...                        ...  \n",
-       "69916      2024-01-25 01:30:00  \n",
-       "69918      2024-01-25 01:00:00  \n",
-       "69920      2024-01-25 00:30:00  \n",
-       "69922      2024-01-25 00:00:00  \n",
-       "69924      2024-01-24 23:30:00  \n",
-       "\n",
-       "[13106 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "standard_night"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "97634863",
    "metadata": {},
    "outputs": [
@@ -1410,7 +1264,7 @@
        "731"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "b5d6cc9b",
    "metadata": {},
    "outputs": [],
@@ -1465,6 +1319,16 @@
     "        - rates['Yuno Energy - D Smart Bonus']['Credit'] * time_period_days\n",
     "        - rates['Yuno Energy - D Smart Bonus']['Feed In Tariff'] * feedin_total\n",
     "        + rates['Yuno Energy - D Smart Bonus']['Gas'] * gas_usage_daily * time_period_days\n",
+    "        + rates['Yuno Energy - D Smart Bonus']['Gas - Standing Charge'] * time_period_days\n",
+    "    ,\n",
+    "    \"Yuno Energy - D Smart Bonus + 6%\":\n",
+    "        rates['Yuno Energy - D Smart Bonus']['Night Rate'] * 1.06 * totals['Standard']['Night Rate kWh']\n",
+    "        + rates['Yuno Energy - D Smart Bonus']['Day Rate'] * 1.06 * totals['Standard']['Day Rate kWh']\n",
+    "        + rates['Yuno Energy - D Smart Bonus']['Peak Rate'] * 1.06 * totals['Standard']['Peak Rate kWh']\n",
+    "        + rates['Yuno Energy - D Smart Bonus']['Standing Charge/Day'] * time_period_days\n",
+    "        - rates['Yuno Energy - D Smart Bonus']['Credit'] * time_period_days\n",
+    "        - rates['Yuno Energy - D Smart Bonus']['Feed In Tariff'] * feedin_total\n",
+    "        + rates['Yuno Energy - D Smart Bonus']['Gas'] * gas_usage_daily * 1.06 * time_period_days\n",
     "        + rates['Yuno Energy - D Smart Bonus']['Gas - Standing Charge'] * time_period_days\n",
     "    ,\n",
     "    \"Yuno Energy - EV Variable\":\n",
@@ -1610,12 +1474,21 @@
     "        - rates['Yuno Energy - Day/Night Variable']['Feed In Tariff'] * feedin_total\n",
     "        + rates['Yuno Energy - Day/Night Variable']['Gas'] * gas_usage_daily * time_period_days\n",
     "        + rates['Yuno Energy - Day/Night Variable']['Gas - Standing Charge'] * time_period_days\n",
+    "    ,\n",
+    "    \"Energia Offer\":\n",
+    "        rates['Energia Offer']['Night Rate'] * totals['Standard']['Night Rate kWh']\n",
+    "        + rates['Energia Offer']['Day Rate'] * totals['Standard']['Day Rate kWh']\n",
+    "        + rates['Energia Offer']['Peak Rate'] * totals['Standard']['Peak Rate kWh']\n",
+    "        + rates['Energia Offer']['Standing Charge/Day'] * time_period_days\n",
+    "        - rates['Energia Offer']['Feed In Tariff'] * feedin_total\n",
+    "        + rates['Energia Offer']['Gas'] * gas_usage_daily * time_period_days\n",
+    "        + rates['Energia Offer']['Gas - Standing Charge'] * time_period_days\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "3c975a9c",
    "metadata": {},
    "outputs": [
@@ -1649,12 +1522,20 @@
        "      <td>1072.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>Yuno Energy - D Smart Bonus + 6%</th>\n",
+       "      <td>1142.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Bord Gáis - Smart EV Bonus</th>\n",
        "      <td>1179.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Flogas - Smart Bonus</th>\n",
        "      <td>1188.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Energia Offer</th>\n",
+       "      <td>1311.46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Flogas - Fixed</th>\n",
@@ -1727,8 +1608,10 @@
       "text/plain": [
        "                                       Period Cost (€)\n",
        "Yuno Energy - D Smart Bonus                    1072.70\n",
+       "Yuno Energy - D Smart Bonus + 6%               1142.77\n",
        "Bord Gáis - Smart EV Bonus                     1179.35\n",
        "Flogas - Smart Bonus                           1188.08\n",
+       "Energia Offer                                  1311.46\n",
        "Flogas - Fixed                                 1411.81\n",
        "Yuno Energy - Dual Smart                       1413.60\n",
        "Pinergy - Nighttime                            1418.10\n",
@@ -1747,7 +1630,7 @@
        "Yuno Energy - EV Variable                      1689.87"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1761,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "0cb9a028",
    "metadata": {},
    "outputs": [],
