--- a/electricity_rates_2026/electricity_rates_2026_1mc.ipynb
+++ b/electricity_rates_2026/electricity_rates_2026_1mc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "262028d0",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "821c109b",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "9       0.000  Active Import Interval (kWh)    2026-01-22 16:00:00"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "1449228c",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "np.float64(3836.7389999999996)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "190442dd",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "4af0df07",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
        "9      2026-01-22 15:30:00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "c3ab1b72",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "  'Peak Rate': {'Start': '17', 'End': '19'}}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,6 +576,15 @@
     "        \"Feed In Tariff\": 15.89,\n",
     "        \"Gas\": 8.22,\n",
     "        \"Gas - Standing Charge\": 15003/365\n",
+    "    },\n",
+    "    \"Energia Offer\": {\n",
+    "        \"Night Rate\": 14.36,\n",
+    "        \"Day Rate\": 26.12,\n",
+    "        \"Peak Rate\": 29.33,\n",
+    "        \"Standing Charge/Day\": 26501/365 + (26.30/365),\n",
+    "        \"Feed In Tariff\": 18.5,\n",
+    "        \"Gas\": 6.98,\n",
+    "        \"Gas - Standing Charge\": 14160/365\n",
     "    }\n",
     "}\n",
     "\n",
@@ -805,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "ea7a24ff",
    "metadata": {},
    "outputs": [],
@@ -1064,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "a31d0623",
    "metadata": {},
    "outputs": [
@@ -1175,7 +1184,7 @@
        "Total kWh            2040.798   2040.798  2040.798  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "e82e11cc",
    "metadata": {},
    "outputs": [
@@ -1389,7 +1398,7 @@
        "[12934 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "97634863",
    "metadata": {},
    "outputs": [
@@ -1410,7 +1419,7 @@
        "729"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "b5d6cc9b",
    "metadata": {},
    "outputs": [],
@@ -1465,6 +1474,16 @@
     "        - rates['Yuno Energy - D Smart Bonus']['Credit'] * time_period_days\n",
     "        - rates['Yuno Energy - D Smart Bonus']['Feed In Tariff'] * feedin_total\n",
     "        + rates['Yuno Energy - D Smart Bonus']['Gas'] * gas_usage_daily * time_period_days\n",
+    "        + rates['Yuno Energy - D Smart Bonus']['Gas - Standing Charge'] * time_period_days\n",
+    "    ,\n",
+    "    \"Yuno Energy - D Smart Bonus + 6%\":\n",
+    "        rates['Yuno Energy - D Smart Bonus']['Night Rate'] * 1.06 * totals['Standard']['Night Rate kWh']\n",
+    "        + rates['Yuno Energy - D Smart Bonus']['Day Rate'] * 1.06 * totals['Standard']['Day Rate kWh']\n",
+    "        + rates['Yuno Energy - D Smart Bonus']['Peak Rate'] * 1.06 * totals['Standard']['Peak Rate kWh']\n",
+    "        + rates['Yuno Energy - D Smart Bonus']['Standing Charge/Day'] * time_period_days\n",
+    "        - rates['Yuno Energy - D Smart Bonus']['Credit'] * time_period_days\n",
+    "        - rates['Yuno Energy - D Smart Bonus']['Feed In Tariff'] * feedin_total\n",
+    "        + rates['Yuno Energy - D Smart Bonus']['Gas'] * gas_usage_daily * 1.06 * time_period_days\n",
     "        + rates['Yuno Energy - D Smart Bonus']['Gas - Standing Charge'] * time_period_days\n",
     "    ,\n",
     "    \"Yuno Energy - EV Variable\":\n",
@@ -1610,12 +1629,21 @@
     "        - rates['Yuno Energy - Day/Night Variable']['Feed In Tariff'] * feedin_total\n",
     "        + rates['Yuno Energy - Day/Night Variable']['Gas'] * gas_usage_daily * time_period_days\n",
     "        + rates['Yuno Energy - Day/Night Variable']['Gas - Standing Charge'] * time_period_days\n",
+    "    ,\n",
+    "    \"Energia Offer\":\n",
+    "        rates['Energia Offer']['Night Rate'] * totals['Standard']['Night Rate kWh']\n",
+    "        + rates['Energia Offer']['Day Rate'] * totals['Standard']['Day Rate kWh']\n",
+    "        + rates['Energia Offer']['Peak Rate'] * totals['Standard']['Peak Rate kWh']\n",
+    "        + rates['Energia Offer']['Standing Charge/Day'] * time_period_days\n",
+    "        - rates['Energia Offer']['Feed In Tariff'] * feedin_total\n",
+    "        + rates['Energia Offer']['Gas'] * gas_usage_daily * time_period_days\n",
+    "        + rates['Energia Offer']['Gas - Standing Charge'] * time_period_days\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "3c975a9c",
    "metadata": {},
    "outputs": [
@@ -1651,6 +1679,14 @@
        "    <tr>\n",
        "      <th>Flogas - Smart Bonus</th>\n",
        "      <td>1355.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yuno Energy - D Smart Bonus + 6%</th>\n",
+       "      <td>1402.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Energia Offer</th>\n",
+       "      <td>1441.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Bord Gáis - Smart EV Bonus</th>\n",
@@ -1728,6 +1764,8 @@
        "                                       Period Cost (€)\n",
        "Yuno Energy - D Smart Bonus                    1304.97\n",
        "Flogas - Smart Bonus                           1355.81\n",
+       "Yuno Energy - D Smart Bonus + 6%               1402.35\n",
+       "Energia Offer                                  1441.77\n",
        "Bord Gáis - Smart EV Bonus                     1443.73\n",
        "Pinergy - Nighttime                            1579.96\n",
        "Flogas - Fixed                                 1588.46\n",
@@ -1747,7 +1785,7 @@
        "Yuno Energy - EV Variable                      1957.67"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1761,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "433f0011",
    "metadata": {},
    "outputs": [],
